# HatchTestProject

./: README.md  msgapp-env.yml  pyproject.toml
src/: MessageService.py  sys_configs.py
src/Backend/: ColumnEnums.py  Conversations.py
src/Chat/: Conversation.py
src/Chat/Messages/: Email.py  MMS.py  MessageRegistry.py  SMS.py  __init__.py
tests/: Test_Message_Sending.ipynb  Test_data_struture.ipynb
