[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "message-api"
version = "0.1.0"
description = "A simple message service API"
authors = [
    {name = "Andrew Linhard", email = "ajlinhard@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
pythonpath = ["src"]